  * User defined resolutions were not being properly handled
    - Only the default, `max`, resolution was considered
    - This meant that instances with defined resolutions were not properly displayed
  * Separately, the selected resolution when seeking `max` was not always the actual maximum
  * Additionally, a `HelpSize` Feature, documented separately, was introduced
- Fixes `SyncNVram` Handling
    * The feature was not functional on macOS boots
- Fixes `HelpScan` Handling
  * Rationalises implementation
    - Could be applied, when disabled, to some items that should be excluded
- Improves License Presentation
  * Rationalises presentation to make clear it is on GPLv3/Later
- Improves `MemTest` Handling
  * Updated exclusion from loaders (Row 1 Items)
  * Updated to handle `memtest+{ARCH}.efi` and `memtest86+{ARCH}.efi` files as per upstream
- Improves `ProtectNvram` Handling
  * Now also blocks the `CurrentPolicy` and `CurrentActivePolicy` variables
- Improves `HelpIcon` Handling
  * The following `OS Icons` are now cached on first load and reused as required afterwards when this feature is active
    - List is "os_mac", "os_win", "os_win8", "os_linux", "os_legacy", "os_clover", "os_opencore", "os_unknown", and "dummy image"
    - List is stored in `TableBuiltinIconOS`
  * Supplements the existing caching of items covered by `BuiltinIconTable`
    - The `BuiltinIconTable` item caching always happens with or without the `HelpIcon` feature
- Improves `Misc` Handling
  * Restructured config file into four (4) sections
  * Completed LodePNG 20230410 update started in v0.14.0.AC
  * Renames the `cd` item under the `scanfor` config token as `cdbios`
    - Provides clarity that this is a `BIOS` scan option
    - Maintains compatibility with existing settings including upstream
  * The `TimeoutSeconds` item in `REFIT_MENU_SCREEN` was changed to `INTN`
    - Follow on from fix to `Timeout` item in `REFIT_CONFIG` previously changed to `INTN`